RESOLVED FIXED68600
[GTK] REGRESSION: Empathy crashes when switching theme
https://bugs.webkit.org/show_bug.cgi?id=68600
Summary [GTK] REGRESSION: Empathy crashes when switching theme
Guillaume Desmottes
Reported 2011-09-22 01:23:01 PDT
Original bug report: https://bugzilla.gnome.org/show_bug.cgi?id=659782 - Open empathy's preference dialog - Select an Adium theme - Select a classic theme like "Clean" ==24172== Invalid read of size 8 ==24172== at 0xBACE007: WebKit::core(_WebKitWebView*) (in /home/cassidy/usr/lib64/libwebkitgtk-3.0.so.0.9.0) ==24172== by 0xBAADC45: WebKit::GtkAdjustmentWatcher::adjustmentValueChanged(_GtkAdjustment*) (in /home/cassidy/usr/lib64/libwebkitgtk-3.0.so.0.9.0) ==24172== by 0xF62B543: g_cclosure_marshal_VOID__VOID (gmarshal.c:85) ==24172== by 0xF62998A: g_closure_invoke (gclosure.c:774) ==24172== by 0xF6454DA: signal_emit_unlocked_R (gsignal.c:3272) ==24172== by 0xF64441C: g_signal_emit_valist (gsignal.c:3003) ==24172== by 0xF644985: g_signal_emit (gsignal.c:3060) ==24172== by 0xCF8C1BE: gtk_adjustment_value_changed (gtkadjustment.c:764) ==24172== by 0xCF8B729: gtk_adjustment_set_value (gtkadjustment.c:445) ==24172== by 0x50124B: chat_text_view_scroll_cb (empathy-chat-text-view.c:687) ==24172== by 0xFED4012: g_timeout_dispatch (gmain.c:3907) ==24172== by 0xFED0A22: g_main_dispatch (gmain.c:2441) ==24172== by 0xFED1F68: g_main_context_dispatch (gmain.c:3011) ==24172== by 0xFED2415: g_main_context_iterate (gmain.c:3089) ==24172== by 0xFED2B6E: g_main_loop_run (gmain.c:3297) ==24172== by 0xD0C0F60: gtk_main (gtkmain.c:1362) ==24172== by 0xCF9591D: gtk_application_run_mainloop (gtkapplication.c:115) ==24172== by 0xF34AEC8: g_application_run (gapplication.c:1323) ==24172== by 0x4594C4: main (empathy.c:838) ==24172== Address 0x224a3f38 is 40 bytes inside a block of size 656 free'd ==24172== at 0x4C282ED: free (vg_replace_malloc.c:366) ==24172== by 0xFEDA7BD: g_free (gmem.c:263) ==24172== by 0xFEF3E03: g_slice_free1 (gslice.c:907) ==24172== by 0xF64A875: g_type_free_instance (gtype.c:1930) ==24172== by 0xF63359A: g_object_unref (gobject.c:2759) ==24172== by 0xF62E5E2: g_object_run_dispose (gobject.c:947) ==24172== by 0xD26C429: gtk_widget_destroy (gtkwidget.c:3837) ==24172== by 0x45420A: preferences_preview_theme_changed_cb (empathy-preferences.c:717) ==24172== by 0xF62B543: g_cclosure_marshal_VOID__VOID (gmarshal.c:85) ==24172== by 0xF62998A: g_closure_invoke (gclosure.c:774) ==24172== by 0xF6454DA: signal_emit_unlocked_R (gsignal.c:3272) ==24172== by 0xF64441C: g_signal_emit_valist (gsignal.c:3003) ==24172== by 0xF644985: g_signal_emit (gsignal.c:3060) ==24172== by 0x46D479: theme_manager_emit_changed_idle_cb (empathy-theme-manager.c:92) ==24172== by 0xFED516E: g_idle_dispatch (gmain.c:4801) ==24172== by 0xFED0A22: g_main_dispatch (gmain.c:2441) ==24172== by 0xFED1F68: g_main_context_dispatch (gmain.c:3011) ==24172== by 0xFED2415: g_main_context_iterate (gmain.c:3089) ==24172== by 0xFED2B6E: g_main_loop_run (gmain.c:3297) ==24172== by 0xD0C0F60: gtk_main (gtkmain.c:1362) This uses to work fine so that's probably a WebKit regression.
Attachments
Patch (3.33 KB, patch)
2011-09-22 16:13 PDT, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2011-09-22 16:13:18 PDT
Gustavo Noronha (kov)
Comment 2 2011-09-26 05:05:08 PDT
Comment on attachment 108415 [details] Patch Clearing flags on attachment: 108415 Committed r95940: <http://trac.webkit.org/changeset/95940>
Gustavo Noronha (kov)
Comment 3 2011-09-26 05:05:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.