REGRESSION: Empathy crashes when switching theme https://bugs.webkit.org/show_bug.cgi?id=68600

Patch by Gustavo Noronha Silva <gustavo.noronha@collabora.com> on 2011-09-26
Reviewed by Martin Robinson.

* webkit/webkitwebview.cpp:
(webkit_web_view_set_scroll_adjustments): use the existing
set{Horizontal,Vertical}Adjustment functions, so the code is not
duplicated
(webkit_web_view_dispose): unset the adjustments during dispose,
to avoid late adjustment change notifications hitting the
adjustment watcher

git-svn-id: svn://svn.chromium.org/blink/trunk@95940 bbb929c8-8fbe-4397-9dbb-9b2b20218538